// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / InfoBar Default usage 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
}

.c6 {
  padding-right: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  fill: #FFFFFF;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  background: #FFFFFF;
  color: #282823;
}

.c1 span {
  color: inherit;
}

.c1 a {
  font-weight: bold;
  color: #0046FF;
}

.c1 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c0 {
  background: #f5f5f5;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="c8"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              InfoBar should be used on top of the pages to show Marketing or Customer Support communication messages. Content of the InfoBar is just rendered 
              <code>
                children
              </code>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / InfoBar Different variants 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
}

.c6 {
  padding-right: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c14 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #FFFFFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c17 {
  fill: #00D200;
}

.c15 {
  fill: #FF1900;
}

.c8 {
  fill: #FFFFFF;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  background: #FFFFFF;
  color: #282823;
}

.c1 span {
  color: inherit;
}

.c1 a {
  font-weight: bold;
  color: #0046FF;
}

.c1 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c11 {
  background: #FFCF00;
  color: #282823;
}

.c11 span {
  color: inherit;
}

.c11 a {
  font-weight: bold;
  color: #282823;
}

.c11 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c13 {
  background: #FF1900;
  color: #FFFFFF;
}

.c13 span {
  color: inherit;
}

.c13 a {
  font-weight: bold;
  color: #FFFFFF;
}

.c13 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c16 {
  background: #00D200;
  color: #282823;
}

.c16 span {
  color: inherit;
}

.c16 a {
  font-weight: bold;
  color: #282823;
}

.c16 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c0 {
  background: #f5f5f5;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

<div
  className="c0"
>
  <code>
    no variant passed, defaults to general
  </code>
  <br />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="c8"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    general
  </code>
  <br />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="c8"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    warning
  </code>
  <br />
  <div
    className="c11"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c12"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                stroke={[Function]}
                viewBox="0 0 92 90"
              >
                <path
                  d="M46 0l46 89.3913043H0z"
                />
                <path
                  d="M50 63.8333333v8h-8v-8h8zm0-28v24h-8v-24h8z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    error
  </code>
  <br />
  <div
    className="c13"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c14"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 92 92"
              >
                <path
                  d="M46 92.0000003c25.4050985 0 46-20.5949015 46-46S71.4050985 3.3e-7 46 3.3e-7 0 20.5949018 0 46.0000003c0 25.4050985 20.5949015 46 46 46z"
                />
                <path
                  d="M58.5601262 30.666667l2.710576 2.710576-12.5920355 12.591424 12.5920355 12.5914595-2.710576 2.710576L45.9686667 48.678667l-12.591424 12.5920355-2.710576-2.710576 12.591-12.5914595-12.591-12.591424 2.710576-2.710576 12.591424 12.591 12.5914595-12.591z"
                  fill="#FFF"
                />
                <polygon
                  className="c15"
                  points="8.681 9.967 5.073 6.333 6.396 5 10.004 8.634 13.604 5.007 14.916 6.329 11.316 9.956 15 13.667 13.677 15 9.993 11.289 6.312 14.997 5 13.675"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              The US market is currently down, we are fixing it right now. It will soon be back and running. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    success
  </code>
  <br />
  <div
    className="c16"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c12"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 92 92"
              >
                <path
                  d="M46 91.5c25.4050985 0 46-20.3710439 46-45.5S71.4050985.5 46 .5 0 20.8710439 0 46s20.5949015 45.5 46 45.5z"
                />
                <path
                  d="M63.1517377 34l3.573537 3.5568749L42.1676463 62l-14.870943-14.8016051 3.573537-3.5568749 11.297406 11.2447302z"
                  fill="#FFF"
                />
                <polygon
                  className="c17"
                  points="13.695 6 15 7.314 8.696 13.69 5 9.924 6.319 8.656 8.696 11.059"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              We have fixed the US market issue. It is now back to service. 
              <a
                href="#nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
</div>
`;

exports[`Storyshots Molecules / InfoBar onClose prop demo 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
}

.c6 {
  padding-right: 8px;
}

.c11 {
  padding-left: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  fill: #FFFFFF;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  background: #FFFFFF;
  color: #282823;
}

.c1 span {
  color: inherit;
}

.c1 a {
  font-weight: bold;
  color: #0046FF;
}

.c1 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c0 {
  background: #f5f5f5;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="c8"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              Without onClose prop InfoBar cannot be dismissed
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <br />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
                />
                <polygon
                  className="c8"
                  points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
          >
            <span
              className="c10"
            >
              With onClose prop InfoBar can be dismissed, but ParentComponent is in charge to react and actually hide the InfoBar.
            </span>
          </div>
          <div
            className="c5"
          >
            <div
              className="c11"
            >
              <button
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="c12"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="15.739 12 24 20.062 19.969 24 12 16.223 4.031 24 0 20.062 8.261 12 0 3.938 4.031 0 12 7.777 19.969 0 24 3.938"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
